--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FULL ESCENCIA</title>
 </head>
 <body>
-    <h1>TORO NO OLVIDAS A MI ESPOSA VERÓNICA, SE PINTÓ EL CABELLO PORQUE YO QUISÉ, AHORA YA ENGORDO GRACIAS A LA PLATA DE LA BECA GAAAAAAAAAAAAAAAAAAAAAAAAAA COF COF COF</h1>
+    <h1>Prueba</h1>
 </body>
 <script src="logica.js"></script>
 </html>
