espero que se detenga

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FULL ESCENCIA</title>
 </head>
 <body>
-    <h1>Prueba</h1>
+    <h1>mostrar los cambios</h1>
 </body>
 <script src="logica.js"></script>
 </html>
